Style Layouts Corrections
(Layout,NavBar,SideBar,style.css)
Delete fixed margins tops in components and added scrollbar in main Layout

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ html {
+  overflow-y: hidden;
+} 
+
+/*
+main {
+  overflow-y: scroll !important;
+}¨*/
